# istoria

./: .gitignore  .oxlintrc.json  .prettierignore  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  RELEASING.md  SECURITY.md  conductor.json  electron-builder.yml  index.html  package-lock.json  package.json  transformer_rules.README.md  transformer_rules.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.conductor/: settings.toml
.github/release-assets/: Formula.istoria.rb.tmpl
.github/workflows/: ci.yml  release.yml
electron/: dev.mjs  main.cjs  preload.cjs
examples/: bracket_tagged_pino.txt  monorepo_log.txt  rust_tracing_fmt.txt  sample_log.txt
examples/generator/: fake-logs.mjs
extension/: CHROME_STORE.md  PRIVACY.md  README.md  build.mjs  package-lock.json  package.json
extension/src/: background.js  bridge.js  injected.js  manifest.json  popup.html  popup.js
landing/: index.html
scripts/: set-version.mjs
spike/electron-ghost/: index.html  main.cjs  renderer.tsx  spike.css  vite.config.ts
src/: App.tsx  main.tsx  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: alerts.rs  claude.rs  cli.rs  cli_link.rs  coalesce.rs  code.rs  event.rs  format.rs  headless.rs  http.rs  http_api.rs  ingest.rs  ipc.rs  json_lines.rs  lib.rs  main.rs  mcp.rs  persistence.rs  pins.rs  query.rs  redraw.rs  relevance.rs  ring.rs  socket.rs  source.rs  state.rs  transformers.rs  update.rs  views.rs
src/components/: AIPanel.tsx  AlertCreate.tsx  AlertsModal.tsx  AlertsPanel.tsx  Chrome.tsx  ClaudeButton.tsx  CliSetupGate.tsx  ColumnHeader.tsx  Facets.tsx  FilterBar.tsx  Histogram.tsx  Inspector.tsx  JsonView.tsx  LogStream.tsx  Palette.tsx  PinsPanel.tsx  RangeSlider.tsx  RelevancePill.tsx  SparkleIcon.tsx  StatusBar.tsx  StreamHeader.tsx  Tabs.tsx  Toast.tsx  TransformersPanel.tsx  UpdateBanner.tsx
src/lib/: alerts.ts  alertsBus.ts  facets.ts  filterFocus.ts  highlight.tsx  ipc.ts  logger.ts  notify.ts  query.test.ts  query.ts  sessionBus.ts  sourceColors.ts  syntax.ts  toast.ts  transformers.test.ts  transformers.ts  views.ts
src/styles/: global.css  tokens.css
