[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "1.2.1"
license = "MIT"
authors = ["Dmitry Zaytsev"]
repository = "https://github.com/dmitry-zaitsev/istoria"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
