[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "1.3.2"
license = "MIT"
authors = ["Dmitry Zaytsev <dmitry.zaicew@gmail.com>"]
repository = "https://github.com/dmitry-zaitsev/istoria"
homepage = "https://github.com/dmitry-zaitsev/istoria"

[profile.dev]
codegen-units = 256
debug = "line-tables-only"
split-debuginfo = "unpacked"
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

# Release-shaped iteration. Use `cargo build --profile release-fast` when
# you need optimized behavior but not the full ship-tier LTO cost. The
# ship pipeline (`just release-mac`, CI) keeps using `release` untouched.
[profile.release-fast]
inherits = "release"
lto = "thin"
codegen-units = 16
opt-level = 2
strip = false
