[package]
name = "istoria"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Local log viewer — pipe stdout into a native window."
default-run = "istoria"

[lib]
name = "istoria_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "istoria"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
