[package]
name = "istoria"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Local log viewer — pipe stdout into a native window."
default-run = "istoria"

[lib]
name = "istoria_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "istoria"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
parking_lot = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "io-std", "macros", "sync", "time"] }
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
libc = "0.2"
interprocess = { version = "2", features = ["tokio"] }
chumsky = "0.9"
regex = "1"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# macOS-only: native NSNotification observers that recover the WKWebView
# from stale Core Animation tiles after a graphics-context rebuild
# (sleep/wake, monitor or backing-scale change). See src/redraw.rs.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
block2 = "0.6"

[features]
custom-protocol = ["tauri/custom-protocol"]
